--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,16 @@ logging.level.org.hibernate.orm.connections.pooling=warn
 
 # Include error messages in HTTP responses
 server.error.include-message=always
+
+# Retry configuration
+retry.max-attempts=4
+retry.backoff-delay=2000
+
+# SQS CONSUMERS CONFIG
+aws.sqs.listener.executor.pool.size=45
+aws.sqs.listener.executor.queue.capacity=100
+aws.sqs.consumer.event-notifications.enabled=true
+aws.sqs.consumer.event-notifications.queue-name=event_notifications_sqs
+aws.sqs.consumer.event-notifications.maxConcurrentMessage=5
+aws.sqs.consumer.event-notifications.maxMessagesPerPoll=5
+aws.sqs.consumer.event-notifications.pollTimeoutSeconds=20
