final end to end functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,9 +14,6 @@ spring.datasource.password=cobre1234
 # Hibernate dialect for H2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# Show SQL statements in console
-spring.jpa.show-sql=true
-
 # Let Flyway handle schema creation
 spring.jpa.hibernate.ddl-auto=none
 
@@ -34,11 +31,17 @@ server.error.include-message=always
 retry.max-attempts=4
 retry.backoff-delay=2000
 
+# AWS CONFIG https://docs.awspring.io/spring-cloud-aws/docs/3.1.1/reference/html/appendix.html
+spring.cloud.aws.credentials.sts.role-arn=arn:aws:iam::000000000000:role/local_role
+spring.cloud.aws.region.static=eu-west-1
+spring.cloud.aws.sqs.endpoint=http://localhost:4566
+
 # SQS CONSUMERS CONFIG
 aws.sqs.listener.executor.pool.size=45
 aws.sqs.listener.executor.queue.capacity=100
 aws.sqs.consumer.event-notifications.enabled=true
 aws.sqs.consumer.event-notifications.queue-name=event_notifications_sqs
+aws.sqs.consumer.event-notifications.dlq-name=event_notifications_sqs_dlq
 aws.sqs.consumer.event-notifications.maxConcurrentMessage=5
 aws.sqs.consumer.event-notifications.maxMessagesPerPoll=5
 aws.sqs.consumer.event-notifications.pollTimeoutSeconds=20
