--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,9 @@
 		<springdoc.version>2.5.0</springdoc.version>
 		<mapstruct.version>1.5.5.Final</mapstruct.version>
 		<spring.retry.version>2.0.8</spring.retry.version>
+		<spring.starter.sqs>3.3.0</spring.starter.sqs>
+		<spring.cloud.aws.messaging>2.2.6.RELEASE</spring.cloud.aws.messaging>
+		<spring.messaging>6.1.6</spring.messaging>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -42,10 +45,14 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-aws-messaging</artifactId>
+			<version>${spring.cloud.aws.messaging}</version>
+		</dependency>
+		<dependency>
 			<groupId>io.awspring.cloud</groupId>
 			<artifactId>spring-cloud-aws-starter-sqs</artifactId>
-			<version>3.2.1</version>
-			<scope>test</scope>
+			<version>${spring.starter.sqs}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springdoc</groupId>
